--- a/demo.css
+++ b/demo.css
@@ -1,25 +1,67 @@
 .nav {
-  background: #d4bbff;
+  background: rgb(212, 187, 255);
+  color: rgb(0, 0, 0);
+  margin: 0 auto;
+  max-width: fit-content;
+  min-height: 64px;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
 
 .nav ul {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-ul > li {
+.nav ol {
+  margin: 1rem auto;
+  padding: 0.5rem;
+  width: 100%;
+  height: 100%;
+}
+
+.nav ul li {
   display: block;
+  margin-left: 1rem;
 }
 
-.nav li a {
+.nav ul li p {
+  display: block;
+  padding: 1rem;
+  font-weight: 400;
+}
+
+.nav ol li p {
+  display: inline-block;
+  padding: 1rem;
+  font-weight: 700;
+}
+
+.nav ol li {
+  display: block;
+  color: rgb(61, 20, 131);
+  background-color: rgb(0 0 0 / 0.5);
+}
+
+.nav ul li a {
   display: grid;
   grid-template-columns: max-content 1fr;
   gap: 0.7rem;
   padding: 1rem;
-  color: #000;
+  color: rgb(0 0 0);
   text-decoration: none;
+  cursor: pointer;
 }
 
-.nav li a::before {
-  content: '➡️';
+.nav ol li a {
+  padding: 1rem;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  color: rgb(255 255 255);
+  text-decoration: underline;
 }
