--- a/demo.css
+++ b/demo.css
@@ -1,3 +1,18 @@
+@layer defaults, first, second;
+
+@layer defaults {
+  a:any-link { 
+    color: maroon; 
+  }
+  body {
+    background: #fff;
+    color: black;
+  }
+  body main {
+    margin: 0 auto;
+  }
+}
+
 .nav {
   background: rgb(212, 187, 255);
   color: rgb(0, 0, 0);
@@ -17,51 +32,89 @@
   height: 100%;
 }
 
-.nav ol {
-  margin: 1rem auto;
-  padding: 0.5rem;
-  width: 100%;
-  height: 100%;
-}
-
 .nav ul li {
   display: block;
   margin-left: 1rem;
 }
 
-.nav ul li p {
-  display: block;
-  padding: 1rem;
-  font-weight: 400;
-}
-
-.nav ol li p {
-  display: inline-block;
-  padding: 1rem;
-  font-weight: 700;
-}
-
-.nav ol li {
-  display: block;
-  color: rgb(61, 20, 131);
-  background-color: rgb(0 0 0 / 0.5);
-}
-
-.nav ul li a {
+.nav li a {
   display: grid;
   grid-template-columns: max-content 1fr;
   gap: 0.7rem;
   padding: 1rem;
+}
+
+.nav li:before {
+  content: '➡️';
+}
+
+.nav ul li a {
   color: rgb(0 0 0);
   text-decoration: none;
   cursor: pointer;
 }
 
-.nav ol li a {
-  padding: 1rem;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  color: rgb(255 255 255);
-  text-decoration: underline;
+
+@media screen and (min-width: 768px) {
+  .nav {
+    background: white;
+  }
+
+  ul > li {
+    display: inline-block;
+    margin: 0 1rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    background: white;
+  }
+
+  .nav ul {
+    margin: 2rem;
+    padding: 1rem;
+  }
+  
+  ul > li {
+    display: inline-block;
+    margin: 0 1rem;
+  }
+
+  li {
+    color: black;
+  }
+}
+
+.card-child {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+@container (max-width: 400px) {
+  .card-child {
+    grid-template-columns: 1fr;
+  }
+}
+
+@container card (min-width: 400px) and (max-width: 499px) {
+  .card-child {
+    grid-template-columns: 2fr;
+  }
+}
+
+@page {
+  margin: 10px;
+}
+
+@scope (.card) {
+  img {
+      border-color: green;
+  }
+}
+
+@scope (.card) to (.card__content) {
+  img {
+      border-color: red;
+  }
 }
