--- a/demo.css
+++ b/demo.css
@@ -26,8 +26,8 @@
 }
 
 .nav ul {
-  margin: 0;
-  padding: 0;
+  margin: 0.5em;
+  padding: 0.5em;
   width: 100%;
   height: 100%;
 }
@@ -49,7 +49,7 @@
 }
 
 .nav ul li a {
-  color: rgb(0 0 0);
+  color: rgb(0 0 0 / 0.8);
   text-decoration: none;
   cursor: pointer;
 }
