Prevent nesting if no styles inside a top selector. Code refactoring.

--- a/test.css
+++ b/test.css
@@ -150,6 +150,14 @@
   }
 }
 
+.a {
+  padding: 20px
+}
 .a.b .c {
   padding: 10px;
+}
+
+/* TODO Fix */
+.custom-radio-button::after {
+  background: #3f51b5;
 }
